Readme, license, etc

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <option value="6" selected>⬜</option>
                     <option value="7">⬛</option>
                 </select><br />
-                <input type="checkbox" name="cropTransparencyCheckBox" id="cropTransparencyCheckBox" checked><label for="cropTransparencyCheckBox">Crop transparency</label>
+                <!--<input type="checkbox" name="cropTransparencyCheckBox" id="cropTransparencyCheckBox" checked><label for="cropTransparencyCheckBox">Crop transparency</label> NOT IMPLEMENTED YET-->
                 
                 <br />
             </div>
