Add copy button

--- a/index.html
+++ b/index.html
@@ -266,8 +266,9 @@
             </div>
         </div>
 
-        <div id="emojiAreaContainer">
-            <div id="emojiContainer" class="hidden"></div>
+        <div id="emojiAreaContainer" class="hidden">
+            <div id="emojiContainer"></div>
+            <input type="button" id="copyButton" value="Copy" onclick="copyOutput();">
         </div>
     </div>
     <script src="./scripts.js"></script>
