Add links back and forth

--- a/index.html
+++ b/index.html
@@ -271,6 +271,9 @@
             <input type="button" id="copyButton" value="Copy" onclick="copyOutput();">
         </div>
     </div>
+    <div id="footer">
+        <a href="https://github.com/xdpirate/emojificationator" target="_blank">Github</a>
+    </div>
     <script src="./scripts.js"></script>
 </body>
 
