Add download option

--- a/index.html
+++ b/index.html
@@ -266,7 +266,8 @@
 
         <div id="emojiAreaContainer" class="hidden">
             <div id="emojiContainer"></div>
-            <input type="button" id="copyButton" value="Copy" onclick="copyOutput();">
+            <input type="button" id="copyButton" value="Copy" onclick="copyOutput();"> 
+            <input type="button" id="saveButton" value="Save as file" onclick="downloadOutput();"> 
         </div>
     </div>
     <div id="footer">
