--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <option value="7">⬛</option>
                 </select><br />
 
-                <input type="checkbox" id="hqDownsampleCheckBox" name="hqDownsampleCheckBox" onchange="emojificate();" checked><label for="hqDownsampleCheckBox">High quality downsampling</label>
+                <input type="checkbox" id="hqDownsampleCheckBox" name="hqDownsampleCheckBox" onchange="emojificate();" checked><label for="hqDownsampleCheckBox" title="Ignored for images that are smaller than or equal to the max output size">High quality downsampling</label>
                 
                 <br /><br />
             </div>
