--- a/index.html
+++ b/index.html
@@ -37,9 +37,11 @@
                     <option value="7">⬛</option>
                 </select><br />
 
-                <input type="checkbox" id="hqDownsampleCheckBox" name="hqDownsampleCheckBox" onchange="emojificate();" checked><label for="hqDownsampleCheckBox" title="Ignored for images that are smaller than or equal to the max output size">High quality downsampling</label>
+                <input type="checkbox" id="hqDownsampleCheckBox" name="hqDownsampleCheckBox" onchange="emojificate();" checked><label for="hqDownsampleCheckBox" title="Ignored for images that are smaller than or equal to the max output size">High quality downsampling</label><br />
                 
-                <br /><br />
+                <input type="checkbox" id="addDoubleNewlinesCheckBox" name="addDoubleNewlinesCheckBox"><label for="addDoubleNewlinesCheckBox" title="For Markdown documents, Reddit, etc.">Add double newlines when copying/saving</label><br />
+                
+                <br />
             </div>
 
             <div id="canvasAreaContainer" class="hidden">
